--- a/src/Notebook/Eda.ipynb
+++ b/src/Notebook/Eda.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello word\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello word\")"
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns \n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -30,9 +26,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"akram\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -51,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
