--- a/src/Notebook/Eda.ipynb
+++ b/src/Notebook/Eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,22 +10,456 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import the CSV Data as Pandas DataFrame**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= pd.read_csv('Data\\data.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Show Top 5 Records**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Protein1</th>\n",
+       "      <th>Protein2</th>\n",
+       "      <th>Protein3</th>\n",
+       "      <th>Protein4</th>\n",
+       "      <th>Tumour_Stage</th>\n",
+       "      <th>Histology</th>\n",
+       "      <th>ER status</th>\n",
+       "      <th>PR status</th>\n",
+       "      <th>HER2 status</th>\n",
+       "      <th>Surgery_type</th>\n",
+       "      <th>Date_of_Surgery</th>\n",
+       "      <th>Date_of_Last_Visit</th>\n",
+       "      <th>Patient_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>0.95256</td>\n",
+       "      <td>2.15000</td>\n",
+       "      <td>0.007972</td>\n",
+       "      <td>-0.048340</td>\n",
+       "      <td>II</td>\n",
+       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>20-May-18</td>\n",
+       "      <td>26-Aug-18</td>\n",
+       "      <td>Alive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>54</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>1.38020</td>\n",
+       "      <td>-0.498030</td>\n",
+       "      <td>-0.507320</td>\n",
+       "      <td>II</td>\n",
+       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>26-Apr-18</td>\n",
+       "      <td>25-Jan-19</td>\n",
+       "      <td>Dead</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>63</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>-0.52303</td>\n",
+       "      <td>1.76400</td>\n",
+       "      <td>-0.370190</td>\n",
+       "      <td>0.010815</td>\n",
+       "      <td>II</td>\n",
+       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Lumpectomy</td>\n",
+       "      <td>24-Aug-18</td>\n",
+       "      <td>08-Apr-20</td>\n",
+       "      <td>Alive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>78</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>-0.87618</td>\n",
+       "      <td>0.12943</td>\n",
+       "      <td>-0.370380</td>\n",
+       "      <td>0.132190</td>\n",
+       "      <td>I</td>\n",
+       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>16-Nov-18</td>\n",
+       "      <td>28-Jul-20</td>\n",
+       "      <td>Alive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>0.22611</td>\n",
+       "      <td>1.74910</td>\n",
+       "      <td>-0.543970</td>\n",
+       "      <td>-0.390210</td>\n",
+       "      <td>II</td>\n",
+       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>Lumpectomy</td>\n",
+       "      <td>12-Dec-18</td>\n",
+       "      <td>05-Jan-19</td>\n",
+       "      <td>Alive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Gender  Protein1  Protein2  Protein3  Protein4 Tumour_Stage  \\\n",
+       "0   42  FEMALE   0.95256   2.15000  0.007972 -0.048340           II   \n",
+       "1   54  FEMALE   0.00000   1.38020 -0.498030 -0.507320           II   \n",
+       "2   63  FEMALE  -0.52303   1.76400 -0.370190  0.010815           II   \n",
+       "3   78  FEMALE  -0.87618   0.12943 -0.370380  0.132190            I   \n",
+       "4   42  FEMALE   0.22611   1.74910 -0.543970 -0.390210           II   \n",
+       "\n",
+       "                       Histology ER status PR status HER2 status Surgery_type  \\\n",
+       "0  Infiltrating Ductal Carcinoma  Positive  Positive    Negative        Other   \n",
+       "1  Infiltrating Ductal Carcinoma  Positive  Positive    Negative        Other   \n",
+       "2  Infiltrating Ductal Carcinoma  Positive  Positive    Negative   Lumpectomy   \n",
+       "3  Infiltrating Ductal Carcinoma  Positive  Positive    Negative        Other   \n",
+       "4  Infiltrating Ductal Carcinoma  Positive  Positive    Positive   Lumpectomy   \n",
+       "\n",
+       "  Date_of_Surgery Date_of_Last_Visit Patient_Status  \n",
+       "0       20-May-18          26-Aug-18          Alive  \n",
+       "1       26-Apr-18          25-Jan-19           Dead  \n",
+       "2       24-Aug-18          08-Apr-20          Alive  \n",
+       "3       16-Nov-18          28-Jul-20          Alive  \n",
+       "4       12-Dec-18          05-Jan-19          Alive  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shape of dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(334, 15)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dataset Information** \n",
+    "* Age: Age of patients \n",
+    "* tumore stage: refers to the extent of the disease, including the size of the tumor and whether it has spread to other parts of the body.\n",
+    "* Protein: intake is crucial for cancer patients, as it plays a significant role in maintaining muscle mass, supporting immune function, and aiding in tissue repair.\n",
+    "* involves examining tissues and cells under a microscope to understand their composition \n",
+    "* surgery type :  crucial component of cancer treatment, aiming to remove cancerous tissue from the body \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Data Checks to perform**\n",
+    "* Check Missing values\n",
+    "* Check Duplicates\n",
+    "* Check data type\n",
+    "* Check the number of unique values of each column\n",
+    "* Check statistics of data set\n",
+    "* Check various categories present in the different categorical column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check missing values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                    0\n",
+       "Gender                 0\n",
+       "Protein1               0\n",
+       "Protein2               0\n",
+       "Protein3               0\n",
+       "Protein4               0\n",
+       "Tumour_Stage           0\n",
+       "Histology              0\n",
+       "ER status              0\n",
+       "PR status              0\n",
+       "HER2 status            0\n",
+       "Surgery_type           0\n",
+       "Date_of_Surgery        0\n",
+       "Date_of_Last_Visit    17\n",
+       "Patient_Status        13\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* we have 17 missing values in date of lase visit column, and 13  missing value on patient status "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check duplicates  \n",
+    "df.duplicated().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* There are no duplicates values in the data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Check data types**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "akram\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 334 entries, 0 to 333\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Age                 334 non-null    int64  \n",
+      " 1   Gender              334 non-null    object \n",
+      " 2   Protein1            334 non-null    float64\n",
+      " 3   Protein2            334 non-null    float64\n",
+      " 4   Protein3            334 non-null    float64\n",
+      " 5   Protein4            334 non-null    float64\n",
+      " 6   Tumour_Stage        334 non-null    object \n",
+      " 7   Histology           334 non-null    object \n",
+      " 8   ER status           334 non-null    object \n",
+      " 9   PR status           334 non-null    object \n",
+      " 10  HER2 status         334 non-null    object \n",
+      " 11  Surgery_type        334 non-null    object \n",
+      " 12  Date_of_Surgery     334 non-null    object \n",
+      " 13  Date_of_Last_Visit  317 non-null    object \n",
+      " 14  Patient_Status      321 non-null    object \n",
+      "dtypes: float64(4), int64(1), object(10)\n",
+      "memory usage: 39.3+ KB\n"
      ]
     }
    ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the number of unique values of each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                    57\n",
+       "Gender                  2\n",
+       "Protein1              333\n",
+       "Protein2              334\n",
+       "Protein3              334\n",
+       "Protein4              333\n",
+       "Tumour_Stage            3\n",
+       "Histology               3\n",
+       "ER status               1\n",
+       "PR status               1\n",
+       "HER2 status             2\n",
+       "Surgery_type            4\n",
+       "Date_of_Surgery       181\n",
+       "Date_of_Last_Visit    285\n",
+       "Patient_Status          2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Check statistics of data set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
