--- a/src/Notebook/Model_trainer.ipynb
+++ b/src/Notebook/Model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4      2018-12-12         2019-01-05          Alive  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "4             12           12  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "4           12  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,23 +693,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19     Alive\n",
-       "35     Alive\n",
-       "68     Alive\n",
-       "192     Dead\n",
-       "142    Alive\n",
-       "126    Alive\n",
-       "94      Dead\n",
+       "239     Dead\n",
+       "27     Alive\n",
+       "290    Alive\n",
+       "130    Alive\n",
+       "176    Alive\n",
+       "151    Alive\n",
+       "110    Alive\n",
        "Name: Patient_Status, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -745,6 +745,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Gender</th>\n",
        "      <th>Tumour_Stage</th>\n",
        "      <th>Histology</th>\n",
        "      <th>ER status</th>\n",
@@ -756,6 +757,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -765,6 +767,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -774,6 +777,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -783,6 +787,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>I</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -792,6 +797,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -807,9 +813,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>312</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -819,6 +827,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>313</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>I</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -828,6 +837,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>314</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -837,6 +847,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>315</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Lobular Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -846,6 +857,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>316</th>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>II</td>\n",
        "      <td>Infiltrating Ductal Carcinoma</td>\n",
        "      <td>Positive</td>\n",
@@ -855,22 +867,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>317 rows × 6 columns</p>\n",
+       "<p>317 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Tumour_Stage                       Histology ER status PR status  \\\n",
-       "0             II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "1             II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "2             II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "3              I   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "4             II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "..           ...                             ...       ...       ...   \n",
-       "312           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "313            I   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "314           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
-       "315           II  Infiltrating Lobular Carcinoma  Positive  Positive   \n",
-       "316           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "     Gender Tumour_Stage                       Histology ER status PR status  \\\n",
+       "0    FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "1    FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "2    FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "3    FEMALE            I   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "4    FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "..      ...          ...                             ...       ...       ...   \n",
+       "312  FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "313  FEMALE            I   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "314  FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
+       "315  FEMALE           II  Infiltrating Lobular Carcinoma  Positive  Positive   \n",
+       "316  FEMALE           II   Infiltrating Ductal Carcinoma  Positive  Positive   \n",
        "\n",
        "    HER2 status                 Surgery_type  \n",
        "0      Negative                        Other  \n",
@@ -885,10 +897,10 @@
        "315    Negative                   Lumpectomy  \n",
        "316    Negative  Modified Radical Mastectomy  \n",
        "\n",
-       "[317 rows x 6 columns]"
+       "[317 rows x 7 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,13 +909,12 @@
     "#Create Columns with 3 types of of transformers \n",
     "\n",
     "catgorical_features = X.select_dtypes(include='O')\n",
-    "catgorical_features  = catgorical_features.drop(columns='Gender',axis = 1)\n",
     "catgorical_features "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +934,7 @@
        "Name: Gender, Length: 317, dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1173,7 @@
        "[317 rows x 11 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,22 +1185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(317, 18)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X.shape"
+    "from sklearn.preprocessing import OneHotEncoder,StandardScaler,OrdinalEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer"
    ]
   },
   {
@@ -1198,11 +1201,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder,StandardScaler,OrdinalEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "\n",
-    "   \n"
+    "ordinal_encoder = OrdinalEncoder()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numric_processeur = Pipeline(steps=[\n",
+    "    (\"imputer\",SimpleImputer(strategy='mean')),\n",
+    "    (\"scale\",StandardScaler())\n",
+    "])\n",
+    "catg_processeur = Pipeline(steps=[\n",
+    "    (\"imputer\",SimpleImputer(strategy='most_frequient')),\n",
+    "    (\"onehot\",OneHotEncoder(),catgorical_features)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('nmeric',numric_processeur,numerical_features)\n",
+    "\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No valid specification of the columns. Only a scalar, list or slice of all integers or all strings, or boolean mask is allowed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpreprocessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\_set_output.py:295\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    293\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    294\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 295\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m f(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    296\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    297\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    298\u001b[0m         return_tuple \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    299\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    300\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    301\u001b[0m         )\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\base.py:1474\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1467\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[0;32m   1469\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m   1470\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m   1471\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1472\u001b[0m     )\n\u001b[0;32m   1473\u001b[0m ):\n\u001b[1;32m-> 1474\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:906\u001b[0m, in \u001b[0;36mColumnTransformer.fit_transform\u001b[1;34m(self, X, y, **params)\u001b[0m\n\u001b[0;32m    903\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_transformers()\n\u001b[0;32m    904\u001b[0m n_samples \u001b[38;5;241m=\u001b[39m _num_samples(X)\n\u001b[1;32m--> 906\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_column_callables\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    907\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_remainder(X)\n\u001b[0;32m    909\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _routing_enabled():\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:496\u001b[0m, in \u001b[0;36mColumnTransformer._validate_column_callables\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    494\u001b[0m         columns \u001b[38;5;241m=\u001b[39m columns(X)\n\u001b[0;32m    495\u001b[0m     all_columns\u001b[38;5;241m.\u001b[39mappend(columns)\n\u001b[1;32m--> 496\u001b[0m     transformer_to_input_indices[name] \u001b[38;5;241m=\u001b[39m \u001b[43m_get_column_indices\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    498\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_columns \u001b[38;5;241m=\u001b[39m all_columns\n\u001b[0;32m    499\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_transformer_to_input_indices \u001b[38;5;241m=\u001b[39m transformer_to_input_indices\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\__init__.py:470\u001b[0m, in \u001b[0;36m_get_column_indices\u001b[1;34m(X, key)\u001b[0m\n\u001b[0;32m    464\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_get_column_indices\u001b[39m(X, key):\n\u001b[0;32m    465\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Get feature column indices for input data X and key.\u001b[39;00m\n\u001b[0;32m    466\u001b[0m \n\u001b[0;32m    467\u001b[0m \u001b[38;5;124;03m    For accepted values of `key`, see the docstring of\u001b[39;00m\n\u001b[0;32m    468\u001b[0m \u001b[38;5;124;03m    :func:`_safe_indexing`.\u001b[39;00m\n\u001b[0;32m    469\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 470\u001b[0m     key_dtype \u001b[38;5;241m=\u001b[39m \u001b[43m_determine_key_type\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    471\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _use_interchange_protocol(X):\n\u001b[0;32m    472\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m _get_column_indices_interchange(X\u001b[38;5;241m.\u001b[39m__dataframe__(), key, key_dtype)\n",
+      "File \u001b[1;32me:\\End to End ML\\Breast Cancer Survival Prediction\\venv\\lib\\site-packages\\sklearn\\utils\\__init__.py:317\u001b[0m, in \u001b[0;36m_determine_key_type\u001b[1;34m(key, accept_slice)\u001b[0m\n\u001b[0;32m    315\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m    316\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(err_msg)\n\u001b[1;32m--> 317\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(err_msg)\n",
+      "\u001b[1;31mValueError\u001b[0m: No valid specification of the columns. Only a scalar, list or slice of all integers or all strings, or boolean mask is allowed"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessor.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
