--- a/src/Notebook/Model_trainer.ipynb
+++ b/src/Notebook/Model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "4      2018-12-12         2019-01-05          Alive  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "4      2018-12-12         2019-01-05          Alive  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -554,20 +554,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>46</td>\n",
+       "      <th>113</th>\n",
+       "      <td>74</td>\n",
        "      <td>FEMALE</td>\n",
-       "      <td>-0.06</td>\n",
-       "      <td>-0.51</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>-0.09</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.01</td>\n",
        "      <td>II</td>\n",
-       "      <td>Infiltrating Ductal Carcinoma</td>\n",
+       "      <td>Infiltrating Lobular Carcinoma</td>\n",
        "      <td>Negative</td>\n",
-       "      <td>Lumpectomy</td>\n",
-       "      <td>2019-10-22</td>\n",
-       "      <td>2021-02-09</td>\n",
-       "      <td>Dead</td>\n",
+       "      <td>Modified Radical Mastectomy</td>\n",
+       "      <td>2019-06-14</td>\n",
+       "      <td>2019-06-20</td>\n",
+       "      <td>Alive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -575,16 +575,16 @@
       ],
       "text/plain": [
        "     Age  Gender  Protein1  Protein2  Protein3  Protein4 Tumour_Stage  \\\n",
-       "108   46  FEMALE     -0.06     -0.51      0.89     -0.09           II   \n",
+       "113   74  FEMALE     -0.27      1.27      0.38     -0.01           II   \n",
        "\n",
-       "                         Histology HER2 status Surgery_type Date_of_Surgery  \\\n",
-       "108  Infiltrating Ductal Carcinoma    Negative   Lumpectomy      2019-10-22   \n",
+       "                          Histology HER2 status                 Surgery_type  \\\n",
+       "113  Infiltrating Lobular Carcinoma    Negative  Modified Radical Mastectomy   \n",
        "\n",
-       "    Date_of_Last_Visit Patient_Status  \n",
-       "108         2021-02-09           Dead  "
+       "    Date_of_Surgery Date_of_Last_Visit Patient_Status  \n",
+       "113      2019-06-14         2019-06-20          Alive  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -651,19 +651,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>58</td>\n",
+       "      <th>165</th>\n",
+       "      <td>85</td>\n",
        "      <td>FEMALE</td>\n",
-       "      <td>-1.27</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>-0.39</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>-0.26</td>\n",
+       "      <td>-0.65</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>Negative</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>2018-06-15</td>\n",
-       "      <td>2019-12-16</td>\n",
+       "      <td>2018-11-06</td>\n",
+       "      <td>2021-01-17</td>\n",
        "      <td>Alive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -671,17 +671,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Age  Gender  Protein1  Protein2  Protein3  Protein4  Tumour_Stage  \\\n",
-       "8   58  FEMALE     -1.27      0.11      1.14     -0.39          1.00   \n",
+       "     Age  Gender  Protein1  Protein2  Protein3  Protein4  Tumour_Stage  \\\n",
+       "165   85  FEMALE      0.41      0.33     -0.26     -0.65          1.00   \n",
        "\n",
-       "   Histology HER2 status  Surgery_type Date_of_Surgery Date_of_Last_Visit  \\\n",
-       "8       0.00    Negative          0.00      2018-06-15         2019-12-16   \n",
+       "     Histology HER2 status  Surgery_type Date_of_Surgery Date_of_Last_Visit  \\\n",
+       "165       0.00    Negative          0.00      2018-11-06         2021-01-17   \n",
        "\n",
-       "  Patient_Status  \n",
-       "8          Alive  "
+       "    Patient_Status  \n",
+       "165          Alive  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
        "4        False                  True  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "4            1          5          2018             12           12  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        " 'day_Surgery']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,9 +1146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'sparse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m numric_processeur \u001b[38;5;241m=\u001b[39m Pipeline(steps\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m      2\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimputer\u001b[39m\u001b[38;5;124m\"\u001b[39m,SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m)),\n\u001b[0;32m      3\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscale\u001b[39m\u001b[38;5;124m\"\u001b[39m,StandardScaler())\n\u001b[0;32m      4\u001b[0m ])\n\u001b[0;32m      5\u001b[0m catg_processeur \u001b[38;5;241m=\u001b[39m Pipeline(steps\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m      6\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimputer\u001b[39m\u001b[38;5;124m\"\u001b[39m,SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmost_frequient\u001b[39m\u001b[38;5;124m'\u001b[39m)),\n\u001b[1;32m----> 7\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124monehot\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[43mOneHotEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhandle_unknown\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mignore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43msparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m)\n\u001b[0;32m      8\u001b[0m ])\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'sparse'"
+     ]
+    }
+   ],
    "source": [
     "numric_processeur = Pipeline(steps=[\n",
     "    (\"imputer\",SimpleImputer(strategy='mean')),\n",
@@ -1156,13 +1168,13 @@
     "])\n",
     "catg_processeur = Pipeline(steps=[\n",
     "    (\"imputer\",SimpleImputer(strategy='most_frequient')),\n",
-    "    (\"onehot\",OneHotEncoder(handle_unknown='ignore'))\n",
+    "    (\"onehot\",OneHotEncoder(handle_unknown='ignore',sparse=False))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1401,25 +1413,6 @@
     "model,prediction = clf.fit(X_train,X_test,y_train,y_test)\n",
     "print(prediction)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lazypredict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[127], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlazypredict\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lazypredict'"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
